tests/cancel/cancel_2.stderr
error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_2.rs:86:35
   |
85 |     cancel(s.session1);
   |            ---------- value partially moved here
86 |     let (_, s) = recv_mpst_a_to_c(s)?;
   |                                   ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `mpstthree::binary::Send<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait

error[E0382]: use of partially moved value: `s`
  --> $DIR/cancel_2.rs:94:35
   |
92 |     cancel(s.session1);
   |            ---------- value partially moved here
93 |
94 |     let (_, s) = recv_mpst_b_to_a(s)?;
   |                                   ^ value used here after partial move
   |
   = note: partial move occurs because `s.session1` has type `Recv<i32, mpstthree::binary::End>`, which does not implement the `Copy` trait
